k8s/saga-k8s/components/base-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: base-service
spec:
  type: ClusterIP
  selector:
    app: base-service
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
