k8s/saga-k8s/components/base-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: base-service.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: base-service
                port:
                  number: 8080
